--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   "devDependencies": {
     "bootstrap": "^4.3.1",
     "react-popper": "^0.9.2",
-    "reactstrap": "^8.0.1"
+    "react-redux": "^5.0.7",
+    "reactstrap": "^8.0.1",
+    "redux": "^3.7.2"
   }
 }
