--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bootstrap": "^4.3.1",
     "react-popper": "^0.9.2",
     "react-redux": "^5.0.7",
+    "react-redux-form": "^1.16.8",
     "reactstrap": "^8.0.1",
     "redux": "^3.7.2"
   }
