--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "bootstrap-social": "^5.1.1",
     "cross-fetch": "^2.1.0",
     "font-awesome": "^4.7.0",
+    "prop-types": "^15.6.0",
     "react": "^16.9.0",
     "react-animation-components": "^3.0.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-transition-group": "^2.3.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
   },
